--- a/login.html
+++ b/login.html
@@ -25,6 +25,7 @@
                 </td>
             </tr>
             <tr>
+                <!--added by hrishikesh to try git on MS visual studio -->
                 <td>
                     <button type="submit" value="login">Submit</button>
                 </td>
